<resources>
    <string name="app_name">MyVIBAssistant</string>
    <string name="choose_language">Choose your language</string>
    <string name="choose_language_prompt">Select your favourable language</string>
    <string name="english_selection">English</string>
    <string name="vietnamese_selection">Tiếng Việt</string>
    <string name="often_do">Things you often do</string>
    <string name="frequently_performed">Frequently performed tasks</string>
    <string name="account_header">Account</string>
    <string name="account_desc">View account details</string>
    <string name="transaction_header">Transaction</string>
    <string name="transaction_desc">Make a transaction</string>
    <string name="billings_header">Billings</string>
    <string name="billings_desc">Pay for bills</string>
    <string name="help_header">How can I help ?</string>
    <string name="help_description">Say anything you want to do</string>
    <string name="speech_prompt">Please say anything</string>
    <string name="speech_processing">Processing</string>
    <string name="empty_text" translatable="false" />
    <string name="speech_guide">Tab here and talk</string>
    <string name="making_prediction">Making prediction</string>
    <string name="edit">Click above to edit</string>
    <string name="can_not_predict">Can not predict your intent</string>
    <string name="summary_header">Summary</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_saving">Total Saving</string>
    <string name="credit_card">Total credit card</string>
    <string name="electricity">Electricity bill</string>
    <string name="water">Water bill</string>
    <string name="phone">Phone bill</string>
    <string name="payment_header">All payments</string>
    <string name="confirm_button">Confirm</string>
    <string name="successful_payment">Successful payment</string>
    <string name="choose_account">Choose account</string>
    <string name="existing_account">Existing account</string>
    <string name="new_account">New account</string>
    <string name="add_new_account">Add new account</string>
    <string name="select_an_account">Select an account</string>
    <string name="select_a_bank">Select a bank</string>
    <string name="choose_amount">Choose the amount</string>
    <string name="say_account">Say the account</string>
    <string name="say_bank">Say the bank</string>
    <string name="confirm_transaction">Confirm transaction</string>
    <string name="amount_header">Amount</string>
    <string name="successful_transaction">Successful transaction</string>
    <string name="all_accounts">All accounts</string>
    <string name="customer_service">Customer service</string>
    <string name="ai" translatable="false">AI</string>
    <string name="user">You</string>
    <string name="speech_error">Error encounter. Try again</string>
    <string name="prediction_error">Can not make prediction</string>
    <string name="can_not_account">Can not retrieve your account information</string>
    <string name="account">Account</string>
    <string name="transfer">Transfer</string>
    <string name="billing">Billing</string>
    <string name="can_not_payment">Can not retrieve payment. Try again</string>
    <string name="greetings">Hello, how can I help you ?</string>
    <string name="can_not_chat">Can not chat to CustomerService. Try again</string>
    <string name="can_not_speech">Can not perform speech tp text</string>
    <string name="can_not_accounts">Can not retrieve account. Try again</string>
    <string name="location_near_you">Banks near you</string>
    <string name="opening">Opening</string>
    <string name="location_open">Is open</string>
    <string name="location_close">Is closed</string>
    <string name="location_unknown">No info</string>
    <string name="can_not_get_nearest">Can not retrieve banks near you</string>
    <string name="can_not_get_location">Can not get device location</string>
    <string name="no_location_available">Sorry, no bank is available with 2km.</string>
    <string name="touch_icon">Touch the symbol</string>
    <string name="touch_icon_prompt">Touch this symbol on the home page to start talking</string>
    <string name="on_boarding_view_balance">View balance</string>
    <string name="on_boarding_balance_prompt">Say \"View account\" to app to view your balance</string>
    <string name="on_boarding_transfer_money">Transfer money</string>
    <string name="on_boarding_transfer_money_prompt">Say \"Transfer\" to app to make transactions</string>
    <string name="on_boarding_payment">Handle all payments</string>
    <string name="on_boarding_handle_payment">Say \"Pay for bills\" to app to handle all payments</string>
    <string name="on_boarding_customer_service">AI Customer Service</string>
    <string name="on_boarding_customer_service_prompt">Say \"I need some help\" to chat with our AI</string>
    <string name="on_boarding_location">Find nearest banks</string>
    <string name="on_boarding_location_prompt">Say \"Find nearest VIB\" to locate nearest banks</string>
    <string name="on_boarding_skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="on_boarding_finish">Finish</string>
</resources>