<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30sp"
    android:clipToPadding="false"
    android:clipChildren="false">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/choose_language"
        android:textColor="@color/colorTruePrimary"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/choose_language_prompt"
        android:textColor="@color/colorTrueSecondary"
        android:textSize="@dimen/small_prompt_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/englishSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="20sp"
        app:cardCornerRadius="5sp"
        app:cardElevation="5sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/english_selection"
            android:textAlignment="center"
            android:textColor="@color/colorTruePrimary"
            android:textSize="@dimen/large_text_size" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/vietnameseSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="20sp"
        app:cardCornerRadius="5sp"
        app:cardElevation="5sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/englishSelection">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/vietnamese_selection"
            android:textAlignment="center"
            android:textColor="@color/colorTruePrimary"
            android:textSize="@dimen/large_text_size" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>